# centai

./: CMakeLists.txt  Makefile-win32  README.md
inc/: centai.hpp
src/: centai.cpp
testapp/: testapp.cpp
